--- a/stream-example-local.html
+++ b/stream-example-local.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=320, initial-scale=1"/>
-	<title>jsmpeg streaming</title>
+	<title>p2plive test</title>
 	<style type="text/css">
 		body {
 			background: #333;
@@ -33,38 +33,6 @@
 	<script type="text/javascript" src="jsmpg.js"></script>
 	<script type="text/javascript" src="decoder.js"></script>
 	<script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
-	<script type="text/javascript">
-		var trackerAddress, forwardAddress, trackerWS;
-		var client = {
-			pullNum: 0,	//the number of clients this client pull from
-			pushNum: 0 //the number of clients this client push to
-		};
-		var getSourceTimer;
-		$.get("http://127.0.0.1:8080/tracker", function(data) {
-			trackerAddress = data;
-			console.log("选择" + trackerAddress + "作为Tracker服务器\n");
-			trackerWS = new WebSocket( 'ws://' + trackerAddress + "/resource");
-			trackerWS.onmessage = function(event) {
-				msg = JSON.parse(event.data);
-				switch (msg.type) {
-					case "directPull":
-						clearInterval(getSourceTimer);
-						forwardAddress = msg.address;
-						// Setup the WebSocket connection and start the player
-						var client = new WebSocket( 'ws://127.0.0.1:9998/' );
-
-						var canvas = document.getElementById('videoCanvas');
-						var player = new decoder(client, {canvas:canvas});
-				}
-			};
-			trackerWS.onopen = function() {
-				getSourceTimer = setInterval(function() {trackerWS.send(JSON.stringify({method: "getSource"}));},
-					500
-				);
-			}
-		});
-
-
-	</script>
+	<script type="text/javascript" src="p2plive.js"></script>
 </body>
 </html>
