--- a/stream-example-local.html
+++ b/stream-example-local.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=320, initial-scale=1"/>
+	<meta charset="utf-8" />
 	<title>p2plive test</title>
 	<style type="text/css">
 		body {
